--- a/_posts/2024-05-06-Review.md
+++ b/_posts/2024-05-06-Review.md
@@ -1,7 +1,7 @@
 ---
 title: Review
 date: 2024-05-06 07:00:00 +530
-categories: [Homelab,Project review]
+categories: [Homelab,review]
 tags: [review,layout,schematic]
 comments: true
 mermaid: true
